tests/NormalTests/paczka1/fuzzy1/34087709.err
Error in line 6: hv9 S845 16,6
Error in line 10: hv9 A72 78,3
Error in line 14: hv9 S845 85,6
Error in line 30: 8kEabRNpyl S845 67,8
Error in line 3: 2nsCRog38H A72 30,2
